Nu crapa faza cu orders. ez

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,11 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  menu: MyString
+  name: MyString
+  email: MyString
+  phone: MyString
+  address: MyString
+  order_code: MyString
+  order_status: MyString
+
+two:
+  menu: MyString
+  name: MyString
+  email: MyString
+  phone: MyString
+  address: MyString
+  order_code: MyString
+  order_status: MyString
