--- a/test/fixtures/menus.yml
+++ b/test/fixtures/menus.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  date: 2016-08-02
+  title: MyString
+  first_dish: MyString
+  second_dish: MyString
+  dessert: MyString
+
+two:
+  date: 2016-08-02
+  title: MyString
+  first_dish: MyString
+  second_dish: MyString
+  dessert: MyString
